--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -1,16 +1,16 @@
 {% extends 'layouts/master.njk' %}
+{% set bodyClass = "is-hp" %}
+{% set bodySchema = "Festival" %}
 
 {% block title %}{{ title }}{% endblock %}
-{% set bodyClass = "is-hp" %}
 
 {% block head %}
-  <link rel="canonical" href="https://www.studnicefest.cz/">
+  <link rel="canonical" href="{{ meta.url }}">
   <meta name="description" content="{{ event.description }}">
   <meta property="fb:app_id" content="117540538260775">
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="{{ event.name }}">
-  <meta property="og:description" content="{{ event.description }}">
-  <meta name="twitter:title" content="{{ event.name }}">
+  <meta name="twitter:description" property="og:description" content="{{ event.description }}">
+  <meta name="twitter:title" property="og:site_name" content="{{ event.name }}">
 {% endblock %}
 
 {% block content %}
@@ -168,7 +168,4 @@
       </div>
     </section>
   </main>
-
 {% endblock %}
-
-{% block scripts %}{% endblock %}
