--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -3,17 +3,40 @@
 <html lang="cs">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <meta http-equiv="delegate-ch" content="sec-ch-width https://res.cloudinary.com; sec-ch-dpr https://res.cloudinary.com; sec-ch-viewport-width https://res.cloudinary.com;">
-  {% block head_pragma %}{% endblock %}
+  {% block head_pragma %}
+    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+    <meta http-equiv="delegate-ch"
+          content="sec-ch-width https://res.cloudinary.com; sec-ch-dpr https://res.cloudinary.com; sec-ch-viewport-width https://res.cloudinary.com;">
+  {% endblock %}
   <title>{% block title %}{{ title }} - {{ meta.title }}{% endblock %}</title>
-  <link rel="preconnect" href="https://res.cloudinary.com">
-  <link rel="preconnect" href="https://www.googletagmanager.com">
-  {% block head_preconnect %}{% endblock %}
+  {% block head_preconnect %}
+    <link rel="preconnect" href="https://res.cloudinary.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
+  {% endblock %}
+  <style>
+    @font-face {
+      font-family: 'Dosis';
+      font-style: normal;
+      font-display: swap;
+      src: url({{ "dosis.latin.woff2" | assetUrl("fonts") }}) format("woff2");
+      unicode-range: U+0-FF, U+131, U+152, U+153, U+2BB, U+2BC, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+
+    @font-face {
+      font-family: 'Dosis';
+      font-style: normal;
+      font-display: swap;
+      src: url({{ "dosis.latin-ext.woff2" | assetUrl("fonts") }}) format("woff2");
+      unicode-range: U+0100-0101, U+0104-0130, U+0132-0151, U+0154-017F, U+018F, U+0192, U+01A0-01A1, U+01AF-01B0, U+01FA-01FF, U+0218-021B, U+0237, U+0259, U+1E80-1E85, U+1E9E, U+20A1, U+20A4, U+20A6, U+20A8-20AA, U+20AD-20AE, U+20B1-20B2, U+20B4-20B5, U+20B8-20BA, U+20BD, U+20BF;
+    }
+  </style>
   <link rel="stylesheet" href="{{ 'index.css' | assetUrl('stylesheets') }}">
   {% block head_stylesheets %}{% endblock %}
-  {% include "shared/styles.njk" %}
-  {% block head_preload %}{% block preload %}{% endblock %}{% endblock %}
+  {% block head_preload %}
+    <link rel="preload" href="{{ "dosis.latin.woff2" | assetUrl("fonts") }}" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="{{ "heading-bg.svg" | assetUrl("images") }}" as="image">
+    <link rel="preload" href="{{ "horizontal-rule.svg" | assetUrl("images") }}" as="image">
+  {% endblock %}
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || [];
@@ -34,7 +57,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
   {% block head %}{% endblock %}
 </head>
-<body vocab="https://schema.org" typeof="Festival" class="{{ bodyClass }}">
+<body vocab="https://schema.org" typeof="{{ bodySchema }}" class="{{ bodyClass }}">
 <!-- Google Tag Manager (noscript) -->
 <noscript>
   <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TB6TV66" height="0" width="0"
