--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -25,6 +25,7 @@
   --background-color: #fff;
   --text-color: #000;
 
+  --blue-background-color: #edf3fb;
   --blue-background-color: light-dark(#edf3fb, #4b4d4f);
 
   --accent-color: oklch(58.4% 0.155 147);
@@ -35,6 +36,8 @@
   --border-top-image: asset-url("images", "border-top.svg");
   --border-bottom-image: asset-url("images", "border-bottom.svg");
   --hr-border-image: asset-url("images", "horizontal-rule.svg");
+
+  --trees: asset-url("images", "trees.svg");
 
   font-size: 100%;
   color-scheme: light dark;
@@ -93,8 +96,8 @@ hr {
 /* enable transitions */
 [popover], dialog, ::backdrop {
   transition: display 300ms allow-discrete,
-  overlay 300ms allow-discrete,
-  opacity 300ms;
+    overlay 300ms allow-discrete,
+    opacity 300ms;
   opacity: 0;
 }
 
@@ -118,7 +121,7 @@ hr {
 
 a.cta {
   display: inline-block;
-  font-size: 0.8rem;
+  font-size: 1rem;
   line-height: 1;
   text-transform: uppercase;
   font-variant-caps: titling-caps;
@@ -297,7 +300,7 @@ section p {
     bottom: 0;
     z-index: 0;
     height: 200px;
-    background-image: asset-url("images", "trees.svg");
+    background-image: var(--trees);
     background-repeat: repeat-x;
     background-size: contain;
     background-position: bottom center;
@@ -679,6 +682,7 @@ section p {
 }
 
 body > footer {
+  background-image: radial-gradient(#E8FFE5, #A1F9FF);
   background-image: radial-gradient(light-dark(#E8FFE5, #747e72), light-dark(#A1F9FF, #567b7e));
   max-width: 100%;
   padding-block-start: 2em;
@@ -693,10 +697,11 @@ body > footer {
     display: block;
     width: 100%;
     height: 200px;
-    background-image: asset-url("images", "trees.svg");
-    background-repeat: repeat-x;
+    background: var(--trees) repeat-x bottom center;
     background-size: contain;
-    background-position: bottom center;
+  }
+
+  a:any-link {
   }
 }
 
@@ -768,8 +773,8 @@ body > footer {
     text-decoration: none;
     text-decoration-thickness: 0;
     transition: color 300ms ease-in,
-    text-decoration 300ms allow-discrete,
-    text-decoration-thickness 300ms ease-in;
+      text-decoration 300ms allow-discrete,
+      text-decoration-thickness 300ms ease-in;
   }
 
   a:hover {
@@ -788,11 +793,12 @@ body > footer {
 
 #vstupenky,
 #informace-a-upozorneni {
+  --background-image: asset-url("images", "wood.svg");
+
   max-width: 100%;
   margin-block: 3em;
   margin-inline: 0;
   padding-block: 3em;
-  --background-image: asset-url("images", "wood.svg");
   background-image: var(--background-image);
   background-size: cover;
   background-repeat: no-repeat;
@@ -801,7 +807,10 @@ body > footer {
     --background-image: asset-url("images", "wood-dark.svg");
   }
   h2 {
-    color: var(--accent3-color)
+    color: var(--accent3-color);
+    @media (prefers-color-scheme: dark) {
+      text-shadow: 1px 1px #1e1e1e;
+    }
   }
 }
 
