--- a/src/html/novinky/index.njk
+++ b/src/html/novinky/index.njk
@@ -6,6 +6,7 @@
     article {
       background-color: var(--blue-background-color);
       padding: 8px;
+      border-radius: var(--corner-radius);
 
       display: grid;
       grid-auto-flow: row;
@@ -19,6 +20,7 @@
       width: 100%;
       height: auto;
       order: 1;
+      border-radius: calc(var(--corner-radius) / 2);
     }
 
     article time {
