--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -94,9 +94,9 @@
         městečko. Parkovací stání se platí zvlášť.</p>
 
       <div class="tickets__list">
-        {% for wave, tickets in tickets.waves %}
-          {% set isCurrentWave = tickets.currentWave == wave %}
-          {% for ticket in tickets %}
+        {% for wave, items in tickets.waves %}
+          {% set isCurrentWave = (tickets.currentWave == wave) %}
+          {% for ticket in items %}
             <div class="tickets__item {{ "tickets__item--disabled" if not isCurrentWave }}">
               <h3>{{ wave }}.&nbsp;vlna vstupenek</h3>
               <p>{{ ticket.days }}-denní</p>
