--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -15,7 +15,9 @@
 
 {% block content %}
   <div class="hero" id="header">
-    <hgroup></hgroup>
+    <hgroup>
+      <h2>{{ hero.heading }}</h2>
+    </hgroup>
     <section>
       <ol>
         {% for key in event.artists %}
@@ -25,10 +27,10 @@
           {% endif %}
         {% endfor %}
       </ol>
-      <p>#vidimesevlese</p>
       <div>
         <a href="{{ tickets.url }}" class="cta">Koupit si vstupenky</a>
       </div>
+      <p>#vidimesevlese</p>
     </section>
   </div>
   <main>
@@ -78,7 +80,7 @@
         {% set artist = artists[key] %}
         {% set image = images["artists/" + artist.image]["public_id"] %}
         {% set ts = tss.get(key) %}
-        <article class="artists-list__item" id="{{ key }}">
+        <article class="artists-list__item" id="{{ key }}" data-level="{{ artist.heroLevel }}">
           <h3>{{ artist.title }}</h3>
           <img src="{{ image | cloudinaryUrl() }}" alt="{{ artist.title }}" width="296" height="296" loading="lazy"
                sizes="(min-width: 840px) 296px, 88.43vw">
