--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -99,20 +99,31 @@
       <div class="tickets__list">
         {% for wave, items in tickets.waves %}
           {% set isCurrentWave = (tickets.currentWave == wave) %}
+          {% set onsite = (wave == "onsite") %}
+          {# show only past and current waves #}
           {% if wave <= tickets.currentWave %}
-            {# show only past and current waves #}
-            {% for ticket in items %}
-              <div class="tickets__item {{ "tickets__item--disabled" if not isCurrentWave }}">
-                <h3>{{ wave }}.&nbsp;vlna vstupenek</h3>
-                <p>{{ ticket.days }}-denní</p>
-                <p>{{ ticket.price }}&nbsp;Kč</p>
-                {% if isCurrentWave %}
-                  <a href="{{ tickets.url }}" class="button">Koupit</a>
-                {% else %}
-                  <a href="" class="button">Vyprodáno</a>
-                {% endif %}
+            {% if onsite %}
+              <div class="tickets__item tickets__item--onsite">
+                <h3>Na místě</h3>
+                {% for ticket in items %}
+                  <p>{{ ticket.days }}-denní</p>
+                  <p>{{ ticket.price }}&nbsp;Kč</p>
+                {% endfor %}
               </div>
-            {% endfor %}
+            {% else %}
+              {% for ticket in items %}
+                <div class="tickets__item {{ "tickets__item--disabled" if not isCurrentWave }}">
+                  <h3>{{ wave }}.&nbsp;vlna vstupenek</h3>
+                  <p>{{ ticket.days }}-denní</p>
+                  <p>{{ ticket.price }}&nbsp;Kč</p>
+                  {% if isCurrentWave %}
+                    <a href="{{ tickets.url }}" class="button">Koupit</a>
+                  {% else %}
+                    <a href="" class="button">Vyprodáno</a>
+                  {% endif %}
+                </div>
+              {% endfor %}
+            {% endif %}
           {% endif %}
         {% endfor %}
       </div>
