--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -729,7 +729,7 @@ section p {
       width: 30px;
       height: 30px;
       border-radius: 50%;
-      background-color: var(--background-color);
+      background-image: linear-gradient(90deg, transparent 50%, var(--background-color) 50%);
       left: -15px;
       top: calc(50% - 15px);
     }
@@ -740,7 +740,7 @@ section p {
       width: 30px;
       height: 30px;
       border-radius: 50%;
-      background-color: var(--background-color);
+      background-image: linear-gradient(90deg, var(--background-color) 50%, transparent 50%);
       right: -15px;
       top: calc(50% - 15px);
     }
@@ -756,6 +756,7 @@ section p {
 
     &.tickets__item--onsite {
       background-color: var(--accent3-color);
+      padding-inline: 3.25em;
     }
 
     h3, p {
@@ -783,6 +784,13 @@ section p {
       font-weight: bold;
       line-height: 2;
       border-radius: 5px;
+
+      &:hover {
+        background-color: color-mix(in hsl, var(--text-color) 100%, white 20%);
+      }
+      &:active {
+        background-color: color-mix(in hsl, var(--text-color) 100%, black 20%);
+      }
     }
   }
 }
