--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -247,6 +247,7 @@ main, section, body > header, body > footer {
 main {
   display: grid;
   grid-template-columns: subgrid;
+  gap: 4em;
 
   > * {
     grid-column: var(--main-column, main);
@@ -422,8 +423,8 @@ section p {
   display: grid;
   gap: 2em;
 
-  height: 100svh;
-  height: 100cqh;
+  min-height: 100svh;
+  min-height: 100cqh;
 
   p {
     font-family: var(--accented-font);
@@ -796,7 +797,7 @@ section p {
 }
 
 .tickets__free {
-  margin: 2em 0;
+  margin-block: 3em;
   text-align: center;
 
   h3 {
@@ -833,7 +834,6 @@ body > footer {
   background-image: radial-gradient(light-dark(#E8FFE5, #747e72), light-dark(#A1F9FF, #567b7e));
   max-width: 100%;
   padding-block-start: 2em;
-  margin-block-start: 4em;
   display: grid;
   grid-template-columns: subgrid;
 
@@ -951,7 +951,6 @@ body > footer {
   --background-image: asset-url("images", "wood.svg");
 
   max-width: 100%;
-  margin-block: 3em;
   margin-inline: 0;
   padding: 3em 2em;
   background-image: var(--background-image);
