--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -19,6 +19,11 @@
       min-width: clamp(8rem, 2.6667rem + 17.7778vw, 12rem);
       font: clamp(1rem, 0.6667rem + 1.1111vw, 1.25rem) var(--accented-font);
     }
+    .main article {
+      background-color: var(--background-color);
+      border-radius: var(--corner-radius);
+      padding-inline: 1em;
+    }
     @media screen and (min-width: 481px) {
       .main {
         grid-template: "aside article";
