--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -621,7 +621,7 @@ section p {
     }
 
     h3 {
-      font-size: 1.75em;
+      font-size: clamp(1.25em, 4vw ,1.75em);
       font-weight: 700;
       line-height: 1.25;
       text-transform: uppercase;
