--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -226,7 +226,7 @@ a.cta {
   font-weight: bold;
   letter-spacing: 0.1rem;
   text-decoration: none;
-  padding: 0.75rem 2rem;
+  padding: 0.75rem clamp(1em, 4vw, 2rem);
   color: #fff;
   background-color: var(--accent-color);
   border-radius: var(--corner-radius);
