Default dark mode

--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -48,7 +48,7 @@
     })(window, document, 'script', 'dataLayer', 'GTM-TB6TV66');</script>
   <!-- End Google Tag Manager -->
   {% block head_async_scripts %}{% endblock %}
-  <meta name="color-scheme" content="light dark">
+  <meta name="color-scheme" content="dark light">
   <link rel="manifest" href="{{ 'manifest.json' | assetUrl('static') }}">
   <meta name="generator" content="{{ generator or '@hckr_/blendid - static site generator and assets pipeline' }}">
   <meta name="author" content="https://hckr.studio/">
