--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -49,6 +49,8 @@
   <!-- End Google Tag Manager -->
   {% block head_async_scripts %}{% endblock %}
   <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" content="#3b4a55" scheme="dark">
+  <meta name="theme-color" content="#cfe4f2" scheme="light">
   <link rel="manifest" href="{{ 'manifest.json' | assetUrl('static') }}">
   <meta name="generator" content="{{ generator or '@hckr_/blendid - static site generator and assets pipeline' }}">
   <meta name="author" content="https://hckr.studio/">
