--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -60,7 +60,7 @@
   );
 
   font-size: 100%;
-  color-scheme: light dark;
+  color-scheme: dark light;
   accent-color: var(--accent-color);
   interpolate-size: allow-keywords;
 }
